todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: project-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: images-volume
          emptyDir: {}
      containers:
        - name: todo-app
          image: velivalentine/todo-app@sha256:b19d313806c4042c517373fbad8830f760a06cae0cda6ebe163f88b01ca820be
          resources:
            limits:
              memory: "300M"
              cpu: "1"
          volumeMounts:
            - name: images-volume
              mountPath: /usr/src/app/images
